[package]
name = "date-timer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
anyhow = "1.0.79"
chrono = "0.4.33"